<resources>
    <string name="app_name">Operaciones</string>
    <string name="nombre_desarrollador">Desarrollador: Cesar Antonio Alvarado Crespo</string>
    <string name="instrucciones">Ingrese los valores a operar</string>
    <string name="primer_valor">Ingrese el primer valor</string>
    <string name="segundo_valor">Ingrese el segundo valor </string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="operacion">Operación</string>
    <string name="finalizar_programa">Finalizar programa </string>


</resources>