<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="121dp"
                    app:srcCompat="@drawable/logoipn" />

                <TextView
                    android:id="@+id/textViewNombreDesarrollador"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nombre_desarrollador"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:layout_height="121dp"
                    app:srcCompat="@drawable/upiicsa" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/instrucciones"
                android:textSize="20dp"
                android:textStyle="bold|italic" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="8sp"
                app:cardElevation="8sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:text="@string/primer_valor"
                        android:textSize="15dp"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/editTextNumberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="8sp"
                app:cardElevation="8sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="157dp"
                        android:layout_height="wrap_content"
                        android:text="@string/segundo_valor"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/editTextNumberSigned2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned|numberDecimal" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewResultado"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="13dp"
                android:visibility="gone"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textStyle="bold|italic" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="13dp"
                app:cardCornerRadius="8sp"
                app:cardElevation="8sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sumar" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restar" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/multiplicar" />

                        <RadioButton
                            android:id="@+id/radioButton4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dividir" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/finalizar_programa" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>